fix alignment on paragraph expand (site)

--- a/blog/pages/css/index.css
+++ b/blog/pages/css/index.css
@@ -539,13 +539,14 @@ a {
 
 .paragraph.text.expand {
 	position: absolute;
-	max-width: 90%;
-	max-height: 90%;
-	top: 1em;
+	max-width: 100%;
+	max-height: 100%;
+	top: 0;
 	left: 0;
 	right: 0;
-	bottom: 1em;
-	margin: auto;
+	bottom: 0;
+	padding: 1em;
+	box-sizing: border-box;
 	background-color: rgb(var(--background));
 }
 
